# OrionBot

./: CHATBOTCLASS.md  DATASETTRAINING.md  LICENSE  NORESPONSE.md  PREPROCESSING.md  README.md  README.rst  TRAINING.md  TRAININGMODE.md  TRAINMETHOD.md  orionbot.py  pyproject.toml  setup.cfg
dist2/: orionbot-1.0.8-py2.py3-none-any.whl
dist3/: orionbot-1.1.4-py2.py3-none-any.whl
dist4/: orionbot-1.1.5-py2.py3-none-any.whl
dist5/: orionbot-1.2.1-py2.py3-none-any.whl
src/: orionbot.py
src/orionbot.egg-info/: PKG-INFO  SOURCES.txt
