[project]
name = "orionbot"
description = "orionbot - a simple chatbot training framework"
version = "0.9.0"
authors = [
    { name = "Lyubomir Ternavskiy", email = "ternavski103@gmail.com" }
]
dependencies = [
    "nltk",
    "sklearn"
]


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]