[project]
name = "orionbot"
description = "orionbot - a simple chatbot training framework"
version = "1.1.5"
readme = "README.md"
authors = [
    { name = "Lyubomir Ternavskiy", email = "ternavski103@gmail.com" }
]
dependencies = [
    "nltk",
    "scikit-learn"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[tools.flit.metadata]
module="orionbot.py"


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]