[metadata]
name = orionbot
version = 0.7.9
author = Lyubomir Ternavskiy
author_email = ternavski103@gmail.com
description = A lightweight library for training your own Chatbot, without writing a lot of code. This offers some customization options as well as simple usage.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LyubomirT/OrionBot
project_urls =
    Bug Tracker = https://github.com/LyubomirT/OrionBot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src